# AI_BDR

./: .gitignore  .pre-commit-config.yaml  AIRTABLE_PAT_UPDATE.md  DEVELOPMENT.md  HIGH_IMPACT_FIXES.md  LICENSE  LOCAL_TESTING.md  MULTIPLE_TABLES_SETUP.md  README.md  README_LAMBDA.md  SETUP_CHECKLIST.md  airtable_api.py  apollo_api.py  cache_manager.py  check_airtable_data.py  config.py  deploy.sh  email_sender.py  env_example.txt  main.py  outreach.py  package.json  process_leads.py  pyproject.toml  pytest.ini  requirements.txt  send_queue.py  serverless.yml  setup.py  test_apollo.py  test_apollo_alternative.py  test_cache.py  test_contacts_finder.py  test_existing_pipeline.py  test_organization_search.py  test_working_pipeline.py
bdr_ai/: __init__.py  airtable_api.py  apollo_api.py  config.py  email_sender.py  outreach.py  process_leads.py
config/: env_example.txt  serverless.yml
docs/: LOCAL_TESTING.md  MULTIPLE_TABLES_SETUP.md  README.md  README_LAMBDA.md
lambda_functions/: fetch_leads.py  generate_emails.py  process_leads.py  run_pipeline.py  send_emails.py  store_leads.py
scripts/: dev.py
tests/: __init__.py  test_apollo_api.py  test_config.py
utils/: cache_manager.py  send_queue.py
